# AppKiosco

./: UI_Kioco.py  UI_Kiosco.py  UI_Kiosco.ui  config.py  cuentas.py  dbkiosco.db  ejecutable.py  historial.py  main.py  pyproject.toml  requirements.txt  run_query.py  settime.py  time.py  ui_functions.py  ventas.py
