[tool.poetry]
name = "Kiosco"
version = "0.1.0"
description = "administration app"
authors = ["Nahuel"]
license = "private"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
